erDiagram
    %% @surreal.schemafull
    %% @surreal.aggregate "STARODK (Models/STARODK.cs)"
    %% @surreal.guardrail "G6 SCHEMAFULL"
    %% @surreal.note "Generated code + deployment config can be large strings; SurrealDB has no per-field size limit but operators should monitor row size."
    %% @surreal.slice "identity"
    star_odk {
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string id
        %% @surreal.assert "$value != NONE AND $value != \"\""
        string name
        string description
        option<string> public_key
        option<string> private_key_hash
        option<string> avatar_id
        %% @surreal.fieldgroup "BoundHolonIds (list of holon-id strings)"
        option<array<string>> bound_holon_ids
        option<string> target_chain
        option<string> generated_code
        option<string> deployment_config
        datetime created_date
        option<datetime> modified_date
        %% @surreal.default "true"
        bool is_active
        %% @surreal.index fields=[avatar_id] name=star_avatar_id
        %% @surreal.index fields=[target_chain] name=star_target_chain
        %% @surreal.index fields=[is_active] name=star_is_active
    }

    avatar   ||--o{ star_odk : "authored by"
    star_odk }o--o{ holon    : "bound to (bound_holon_ids)"
